# Tetra

./: .env.example  DRAFT_firestore.rules  README.md  all_exports.txt  analyze-useeffects.ts  cleanup.cjs  cleanup.ts  extract.ts  extract2.ts  extract3.ts  extract4.ts  find-all.ts  find-baddeps.ts  find-direct-setstate.ts  find-direct.cjs  find-direct.js  find-effects.ts  find-loops.ts  find-loops2.ts  find-no-deps.cjs  find-ontabupdate.ts  find-real-direct.ts  find-use-effect.ts  firebase-applet-config.json  firebase-blueprint.json  firestore.rules  fix-server.ts  fix2.ts  fix_summary.txt  get-patch.ts  index.html  main.cjs  metadata.json  package-lock.json  package.json  patch-error.ts  patch-react.ts  preload.cjs  server.ts  test-admin-auth.ts  (+12 more)
api/: index.ts
assets/: license.txt
src/: App.tsx  app-utils.tsx  find-chart-deps.ts  find-chartmodal.ts  find-disabled-block.ts  find-disabled.ts  find-functions.ts  find-handlers.ts  find-jsx.ts  find-library-legacy.ts  find-longest-handlers.ts  find-main-return.ts  find-pdf-viewer.ts  find-pill.ts  find-return.ts  find-state.ts  firebase.ts  fix-exports.ts  index.css  inject-chart-modal.ts  main.tsx  refactor-utils.ts  refactor.ts  remove-disabled.ts  remove-legacy-library.ts  replace-chart-modal.ts  replace-toolbar.ts  restore-exports.ts  translations.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src/components/: AudioVisualizerPlayer.tsx  AuthenticationScreen.tsx  ChartModal.tsx  ChatPanel.tsx  DesktopAuthBridge.tsx  DocumentEditor.tsx  DocumentToolbar.tsx  DynamicShimmer.tsx  ErrorBoundary.tsx  HomePanel.tsx  (+14 more)
(+7 files in other folders)
