[package]
name = "cosmi"
version = "1.0.0"
description = "Cosmi Research Workspace Desktop"
authors = ["Cosmi"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5" }

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
# default enables pruning of unused code
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
